--- a/app/views/spree/admin/reviews/index.html.erb
+++ b/app/views/spree/admin/reviews/index.html.erb
@@ -1,79 +1,85 @@
-<% render 'spree/admin/shared/product_sub_menu' %>
-
-<h1><%= t('reviews') %></h1>
-
-<table cellspacing=6 class="index">
-  <tr>
-    <th><%= Spree::Review.human_attribute_name(:created_at) %></th>
-    <th><%= Spree::Review.human_attribute_name(:user) %></th>
-    <th><%= Spree::Review.human_attribute_name(:rating) %></th>
-    <th><%= Spree::Review.human_attribute_name(:title) %> / <%= t('product') %></th>
-    <th><%= Spree::Review.human_attribute_name(:review) %></th>
-    <th></th>
-  </tr>
-<%- @reviews.each do |review| -%>
-  <tr id="<%= dom_id review %>">
-    <td>
-      <%= l review.created_at, :format => :long %>
-    </td>
-    <td>
-      <p><%= review.name %> / <%= review.user_id ? link_to(review.user.try(:email), [:admin, review.user]) : t(:guest) %></p>
-      <p><%= Spree::Review.human_attribute_name(:ip_address) %>: <%= review.ip_address ? link_to(review.ip_address, "http://whois.domaintools.com/#{review.ip_address}") : '-' %></p>
-    </td>
-    <td>
-      <%= txt_stars(review.rating) %>
-    </td>
-    <td>
-      <%= review.title %>
-      <% if review.product %>
-        <%= t('for') %> <%= link_to review.product.name, product_path(review.product) %>
-      <% end %>
-    </td>
-    <td width="50%">
-      <%= h review.review %>
-    </td>
-    <td>
-      <% unless review.approved %>
-        <%= link_to_with_icon 'tick', t('approve'), {:action => 'approve', :id => review.id} %> <br />
-      <% end %>
-      <%= link_to t('feedback'), admin_review_feedback_reviews_path(review) %>(<%= review.feedback_stars %>/<%= review.feedback_reviews.size %>) <br/>
-      <%= link_to_edit review %><br/>
-      <%= link_to_delete review %>
-    </td>
-  </tr>
+<% content_for :page_title do %>
+  <%= Spree.t(:reviews) %>
 <% end %>
-</table>
 
-<%= paginate @reviews -%>
-
-<% content_for :sidebar do %>
-  <div class="box" data-hook="admin_reviews_index_search">
-    <h3><%= t(:search) %></h3>
-
+<% content_for :table_filter do %>
+  <div data-hook="admin_reviews_index_search">
     <%= search_form_for [:admin, @search] do |f| %>
-      <p>
-        <%= label_tag nil, t(:user) %><br />
-        <%= f.text_field :name_cont, :size => 25 %>
-      </p> 
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= label_tag :q_name_cont, Spree::Review.human_attribute_name(:user) %>
+            <%= f.text_field :name_cont, size: 25, class: 'form-control' %>
+          </div>
+        </div>
 
-      <p>
-        <%= label_tag nil, t(:title) -%><br/>
-        <%= f.text_field :title_cont, :size => 25  -%>
-      </p>
-
-      <p>
-        <%= label_tag nil, t(:review) -%><br/>
-        <%= f.text_field :review_cont, :size => 25  -%>
-      </p>
-
-      <p>
-        <%= label_tag nil, t(:approval_status)-%><br/>
-        <%= f.select :approved_eq, [[t('Approved_reviews'), true], [t('Unapproved_reviews'), false]]  -%>
-      </p>
-
-      <div data-hook="admin_reviews_index_search_buttons">
-        <p><%= button t(:search) %></p>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= label_tag :q_title_cont, Spree::Review.human_attribute_name(:title) %>
+            <%= f.text_field :title_cont, size: 25, class: 'form-control' %>
+          </div>
+        </div>
       </div>
-    <%- end -%>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= label_tag :q_review_cont, Spree::Review.human_attribute_name(:review) %>
+            <%= f.text_field :review_cont, size: 25, class: 'form-control' %>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= label_tag :q_approved_eq, Spree.t(:approval_status) %>
+            <%= f.select :approved_eq, [[Spree.t(:all), nil], [Spree.t(:approved_reviews), true], [Spree.t(:unapproved_reviews), false]], {}, class: 'select2' %>
+          </div>
+        </div>
+      </div>
+      <div class="form-actions" data-hook="admin_reviews_index_search_buttons">
+        <%= button Spree.t(:filter_results), 'search' %>
+      </div>
+    <% end %>
   </div>
-<%- end -%>
+<% end %>
+
+<%= render 'spree/admin/shared/index_table_options', collection: @reviews %>
+
+<% if @reviews.any? %>
+  <table class="table" id="listing_reviews">
+    <thead>
+    <tr>
+      <th><%= sort_link @search, :product, Spree.t(:product) %></th>
+      <th><%= sort_link @search, :rating, Spree::Review.human_attribute_name(:rating) %></th>
+      <th><%= Spree.t(:feedback) %></th>
+      <th><%= sort_link @search, :user, Spree::Review.human_attribute_name(:user) %></th>
+      <th><%= sort_link @search, :ip_address, Spree::Review.human_attribute_name(:ip_address) %></th>
+      <th><%= sort_link @search, :created_at, Spree::Review.human_attribute_name(:created_at) %></th>
+      <th data-hook="admin_reviews_index_header_actions" class="actions"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <% @reviews.each do |review| %>
+      <tr data-hook="admin_reviews_index_rows" id="<%= dom_id review %>" class="<%= cycle('odd', 'even') %>">
+        <td><%= link_to_if review.product, review.product.name, product_path(review.product) %></td>
+        <td><%= txt_stars(review.rating) %></td>
+        <td><%= link_to "(#{review.feedback_stars}/#{review.feedback_reviews.size})", admin_review_feedback_reviews_path(review) %></td>
+        <td><%= review.user_id ? link_to(review.user.try(:email), [:admin, review.user]) : Spree.t(:anonymous) %></td>
+        <td><%= link_to_if review.ip_address, review.ip_address, "http://whois.domaintools.com/#{review.ip_address}", target: :blank %></td>
+        <td><%= l review.created_at, format: :short %></td>
+        <td data-hook="admin_reviews_index_row_actions" class="actions">
+          <%= link_to_with_icon 'save', Spree.t(:approve), approve_admin_review_url(review), no_text: true, class: 'approve btn btn-default' unless review.approved %>
+          <%= link_to_edit review, no_text: true, class: 'edit' %>
+          <%= link_to_delete review,  url: "/shop/admin/reviews/destroy?id=#{review.id}" %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <div class="alert alert-info no-objects-found">
+    <%= Spree.t(:no_resource_found, resource: I18n.t(:other, scope: 'activerecord.models.spree/review')) %>
+  </div>
+<% end %>
+
+<%= render 'spree/admin/shared/index_table_options', collection: @reviews %>
